# monorepo

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  aspect.bazelrc  buf.yaml  gazelle_python.yaml  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyrightconfig.json  requirements.lock.txt  requirements.txt
ark_nova_stats/: BUILD.bazel  README.md  config.py  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  models.py  models_test.py
ark_nova_stats/api/: BUILD.bazel  app.py  fly.toml
ark_nova_stats/api/db/: fly.toml
ark_nova_stats/api/gql/: BUILD.bazel  schema.py
ark_nova_stats/api/migrations/: BUILD.bazel  __main__.py  env.py
ark_nova_stats/api/tests/: BUILD.bazel  example_test.py  fixtures.py  game_log_test.py  game_ratings_test.py
ark_nova_stats/bga_log_parser/: BUILD.bazel  README.md  exceptions.py  game_log.py  game_log_test.py  game_ratings.py  game_ratings_test.py
ark_nova_stats/bga_log_parser/fixtures/: 4p.log.json  533468391_darcelmaw_hardyzhao.json  non_ark_nova_game.json  non_play_event.log.json  play_event.log.json  play_new_conservation_project.log.json  ratings_non_arena.json  sample_game_ratings.json  tie.log.json
ark_nova_stats/bga_log_parser/proto/: BUILD.bazel  action.proto  animals.proto  associate.proto  build.proto  cards.proto  game.proto  map.proto  ratings.proto  sponsors.proto  stats.proto
ark_nova_stats/emu_cup/: BUILD.bazel  analyze_games.py  player_elos.py  tables.py
ark_nova_stats/emu_cup/analyses/: BUILD.bazel  elo_adjusted.py  (+4 more)
ark_nova_stats/extension/: background.js  build.sh  content.js  detectivekookaburra.js  game_history.js  index.html  manifest.json  popup.js
ark_nova_stats/frontend/: BUILD.bazel  fly.toml  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
ark_nova_stats/game_server/: BUILD.bazel  game_server.go  game_server_test.go  server.go
ark_nova_stats/proto/: BUILD.bazel  associate.proto  build.proto  cards.proto  display_state.proto  game_state.proto  player_game_state.proto
ark_nova_stats/worker/: BUILD.bazel  app.py  archives.py  fly.toml
base/: BUILD.bazel  flask_app.py
crafting_interpreters/: AstPrinter.java  BUILD.bazel  CraftingInterpeters.java  Expr.java  Interpreter.java  Lox.java  Parser.java  Scanner.java  TokenType.java  crafting_interpreters.cc  crafting_interpreters.h  crafting_interpreters_test.cc  test.lox
crafting_interpreters/tool/: BUILD.bazel  GenerateAst.java
eti_unofficial_tagd/: BUILD.bazel  Makefile  README.md  TODO.md  client.cpp  cursor.hpp  difference_cursor.cpp  difference_cursor.hpp  intersect_cursor.cpp  main.cpp  meta_cursor.hpp  tag.cpp  tag.hpp  tag_cursor.hpp  tagd.cpp  tagd.hpp  topic.cpp
fitbit_challenges/: BUILD.bazel  README.md  config.py  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  fitbit_client.py  models.py  total_amounts.py
fitbit_challenges/api/: BUILD.bazel  app.py  fly.toml
fitbit_challenges/env/: .api.env  .postgres.env
fitbit_challenges/frontend/: .dockerignore  BUILD.bazel  fly.toml  frontend_images.bzl  jest.config.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  webpack.config.js
fitbit_challenges/models/: BUILD.bazel  __init__.py  challenge.py  fitbit_subscription.py  subscription_notification.py  user.py
fitbit_challenges/tests/: BUILD.bazel  bingo_card_pattern_test.py  fitbit_client_test.py
fitbit_challenges/worker/: BUILD.bazel  app.py  fly.toml
gossipglomers/echo/: BUILD.bazel  main.go
home_api/api/: BUILD.bazel  __init__.py  __main__.py  app.py  config.py  requirements.txt
home_api/frontend/: BUILD.bazel  Dockerfile  package-lock.json  package.json  setupTests.jsx  tailwind.config.js
mc_manager/api/: BUILD  BUILD.bazel  __main__.py  app.py  config.py  models.py
mc_manager/frontend/: BUILD  BUILD.bazel  Dockerfile  craco.config.js  package.json  tsconfig.json  webpack.config.js
mc_manager/worker/: BUILD  BUILD.bazel  Dockerfile  wait-for  worker.py
py_proto/: BUILD.bazel  proto_bool.py  proto_comment.py  proto_constant.py  proto_enum.py  proto_extend.py  proto_extensions.py  proto_file.py  proto_float.py  proto_identifier.py  proto_import.py  proto_int.py  proto_map.py  proto_message.py  proto_message_field.py  proto_oneof.py  proto_option.py  proto_package.py  proto_range.py  proto_reserved.py  proto_service.py  proto_string_literal.py  proto_syntax.py
py_proto/test/: BUILD.bazel  proto_bool_test.py  proto_comment_test.py  proto_constant_test.py  proto_enum_test.py  proto_extend_test.py  proto_extensions_test.py  proto_file_test.py  proto_float_test.py  proto_identifier_test.py  proto_import_test.py  proto_int_test.py  proto_map_test.py  proto_message_field_test.py  proto_message_test.py  proto_oneof_test.py  proto_option_test.py  proto_package_test.py  proto_range_test.py  proto_reserved_test.py  proto_service_test.py  proto_string_literal_test.py  proto_syntax_test.py
py_proto/util/: BUILD.bazel  compatibility_checker.py  parser.py
react_library/: BUILD.bazel  globals.d.ts  jest.config.json  package.json  setupTests.jsx  tailwind.config.js  tsconfig.json  vitest.config.ts
react_library/DateUtils/: BUILD.bazel  index.test.tsx
react_library/LoadingSpinner/: BUILD.bazel  index.tsx
react_library/NavBar/: BUILD.bazel  index.tsx
react_library/PageContainer/: BUILD.bazel  index.tsx
react_library/Table/: BUILD.bazel  index.test.tsx  index.tsx  vitest.config.mjs
react_library/mocks/: fileMock.tsx
seinmastudios.com/: BUILD.bazel
skeleton/: BUILD.bazel  README.md  config.py  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  models.py  models_test.py
skeleton/api/: BUILD.bazel  __main__.py  app.py  fly.toml
skeleton/frontend/: BUILD.bazel  fly.toml  package.json  tsconfig.json
skeleton/tests/: BUILD.bazel  models_test.py
skeleton/worker/: BUILD.bazel  app.py  fly.toml
torrent_hook/: BUILD.bazel  torrent_finished.py
torrent_hook/scripts/: torrent_finished
(+906 files in other folders)
