load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "flask_app_py",
    srcs = ["flask_app.py"],
    data = [
        "@py_deps//pg8000",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@py_deps//flask",
        "@py_deps//flask_cors",
        "@py_deps//flask_migrate",
        "@py_deps//flask_sqlalchemy",
        "@py_deps//pg8000",  # keep
    ],
)
