load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "fitbit_client_py",
    srcs = ["fitbit_client.py"],
    visibility = ["//fitbit_challenges:__subpackages__"],
    deps = [
        "@py_deps//requests",
    ],
)

py_library(
    name = "bingo_card_pattern_py",
    srcs = ["bingo_card_pattern.py"],
    visibility = ["//fitbit_challenges:__subpackages__"],
)

py_library(
    name = "models_py",
    srcs = ["models.py"],
    visibility = ["//fitbit_challenges:__subpackages__"],
    deps = [
        ":bingo_card_pattern_py",
        ":config_py",
        ":fitbit_client_py",
        "@py_deps//requests",
        "@py_deps//sqlalchemy",
    ],
)

py_library(
    name = "config_py",
    srcs = ["config.py"],
    visibility = ["//fitbit_challenges:__subpackages__"],
    deps = [
        ":fitbit_client_py",
        "//base:flask_app_py",
    ],
)
