load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "proto_bool",
    srcs = ["proto_bool.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_identifier",
        ":proto_node",
    ],
)

py_library(
    name = "proto_comment",
    srcs = ["proto_comment.py"],
    visibility = ["//:__subpackages__"],
    deps = [":proto_node"],
)

py_library(
    name = "proto_constant",
    srcs = ["proto_constant.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_bool",
        ":proto_float",
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
        ":proto_string_literal",
    ],
)

py_library(
    name = "proto_enum",
    srcs = ["proto_enum.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_comment",
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
        ":proto_option",
        ":proto_reserved",
    ],
)

py_library(
    name = "proto_extend",
    srcs = ["proto_extend.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_comment",
        ":proto_identifier",
        ":proto_message_field",
        ":proto_node",
    ],
)

py_library(
    name = "proto_extensions",
    srcs = ["proto_extensions.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_identifier",
        ":proto_node",
        ":proto_range",
    ],
)

py_library(
    name = "proto_file",
    srcs = ["proto_file.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_comment",
        ":proto_enum",
        ":proto_extend",
        ":proto_import",
        ":proto_message",
        ":proto_node",
        ":proto_option",
        ":proto_package",
        ":proto_service",
        ":proto_syntax",
    ],
)

py_library(
    name = "proto_float",
    srcs = ["proto_float.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
    ],
)

py_library(
    name = "proto_identifier",
    srcs = ["proto_identifier.py"],
    visibility = ["//:__subpackages__"],
    deps = [":proto_node"],
)

py_library(
    name = "proto_import",
    srcs = ["proto_import.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_node",
        ":proto_string_literal",
    ],
)

py_library(
    name = "proto_int",
    srcs = ["proto_int.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_identifier",
        ":proto_node",
    ],
)

py_library(
    name = "proto_map",
    srcs = ["proto_map.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_identifier",
        ":proto_int",
        ":proto_message_field",
        ":proto_node",
    ],
)

py_library(
    name = "proto_message",
    srcs = ["proto_message.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_comment",
        ":proto_enum",
        ":proto_extend",
        ":proto_extensions",
        ":proto_identifier",
        ":proto_map",
        ":proto_message_field",
        ":proto_node",
        ":proto_oneof",
        ":proto_option",
        ":proto_reserved",
    ],
)

py_library(
    name = "proto_message_field",
    srcs = ["proto_message_field.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_enum",
        ":proto_identifier",
        ":proto_int",
        ":proto_node",
    ],
)

py_library(
    name = "proto_node",
    srcs = ["proto_node.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "proto_oneof",
    srcs = ["proto_oneof.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_comment",
        ":proto_identifier",
        ":proto_map",
        ":proto_message_field",
        ":proto_node",
        ":proto_option",
    ],
)

py_library(
    name = "proto_option",
    srcs = ["proto_option.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_constant",
        ":proto_identifier",
        ":proto_node",
    ],
)

py_library(
    name = "proto_package",
    srcs = ["proto_package.py"],
    visibility = ["//:__subpackages__"],
    deps = [":proto_node"],
)

py_library(
    name = "proto_range",
    srcs = ["proto_range.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_int",
        ":proto_node",
    ],
)

py_library(
    name = "proto_reserved",
    srcs = ["proto_reserved.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_identifier",
        ":proto_node",
        ":proto_range",
    ],
)

py_library(
    name = "proto_service",
    srcs = ["proto_service.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_comment",
        ":proto_identifier",
        ":proto_node",
        ":proto_option",
    ],
)

py_library(
    name = "proto_string_literal",
    srcs = ["proto_string_literal.py"],
    visibility = ["//:__subpackages__"],
    deps = [":proto_node"],
)

py_library(
    name = "proto_syntax",
    srcs = ["proto_syntax.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":proto_node",
        ":proto_string_literal",
    ],
)
