load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

copy_to_bin(
    name = "testfixtures",
    srcs = [
        "mocks/fileMock.js",
        "package.json",
    ],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "tailwindconfig",
    srcs = ["tailwind.config.js"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "jestconfig",
    srcs = ["jest.config.json"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "globalsdts",
    srcs = ["globals.d.ts"],
    visibility = ["//visibility:public"],
)

copy_to_bin(
    name = "vitestconfigts",
    srcs = ["vitest.config.js"],
    visibility = ["//visibility:public"],
)

ts_project(
    name = "fileMock",
    srcs = [
        "mocks/fileMock.tsx",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    out_dir = ".",
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tailwindconfigtsx",
    srcs = [
        "tailwind.config.tsx",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    out_dir = ".",
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "vitestsetupts",
    srcs = [
        "vitest.setup.ts",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    out_dir = ".",
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@testing-library/jest-dom",
    ],
)

ts_project(
    name = "vitestconfigts_build",
    srcs = [
        "vitest.config.ts",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    out_dir = ".",
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@vitejs/plugin-react",
        "//:node_modules/vitest",
    ],
)
